syntax = "proto3";

package appointment.v1;

option go_package = "gen/appointment/v1;appointmentv1";

import "google/protobuf/timestamp.proto";

message Appointment {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  string user_id = 6;
  string status = 7;
  string location = 8;
  repeated string attendee_ids = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// auth

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string name = 3;
}

// appointments

message CreateAppointmentRequest {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  string location = 5;
  repeated string attendee_ids = 6;
}

message CreateAppointmentResponse {
  Appointment appointment = 1;
}

message ListAppointmentsRequest {
  google.protobuf.Timestamp range_start = 1;
  google.protobuf.Timestamp range_end = 2;
}

message ListAppointmentsResponse {
  repeated Appointment appointments = 1;
}

message GetAppointmentRequest {
  string id = 1;
}

message GetAppointmentResponse {
  Appointment appointment = 1;
}

message UpdateAppointmentRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  string location = 6;
  repeated string attendee_ids = 7;
}

message UpdateAppointmentResponse {
  Appointment appointment = 1;
}

message DeleteAppointmentRequest {
  string id = 1;
}

message DeleteAppointmentResponse {}

service ScheduleService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc CreateAppointment(CreateAppointmentRequest) returns (CreateAppointmentResponse);
  rpc ListAppointments(ListAppointmentsRequest) returns (ListAppointmentsResponse);
  rpc GetAppointment(GetAppointmentRequest) returns (GetAppointmentResponse);
  rpc UpdateAppointment(UpdateAppointmentRequest) returns (UpdateAppointmentResponse);
  rpc DeleteAppointment(DeleteAppointmentRequest) returns (DeleteAppointmentResponse);
}
